<resources>
    <string name="app_name">MyMimosa©</string>
    <string name="tab_text_1">FORMS</string>
    <string name="tab_text_2">CHECKLIST</string>
    <string name="tab_text_3">MY REQUESTS</string>
    <string name="tab_text_4">APPROVAL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="approver_hos_array">
        <item>Select HOS Approver </item>
        <item>Annie Mangwanda</item>
        <item> Belinda Muzvidziwa</item>
        <item> Brian Nyamubapasi</item>
        <item> Brighton Daka</item>
        <item> Bryan Matingwina</item>
        <item> Chida Mundiri</item>
        <item> Christopher Mushaike</item>
        <item> Cyprian Mpofu</item>
        <item> Didimalang Phuthi</item>
        <item> Dumisani Sisale</item>
        <item> Edgar Gwatumba</item>
        <item> Edias Mudzovaniswa</item>
        <item> Edmore Ngoribo</item>
        <item> Edmore Tafirenyika</item>
        <item> Emmanuel Chiguba</item>
        <item> Evans Mtombeni</item>
        <item> Faith Maipisi</item>
        <item> Forward Manyanga</item>
        <item> Freedom Chikona</item>
        <item> Fungai Makoni</item>
        <item> Gabriel Mwale</item>
        <item> George Mawere</item>
        <item> Ignatius Mahwite</item>
        <item> Jill Mkharo</item>
        <item> Jonathan Mhango</item>
        <item> Lloyd Shamu</item>
        <item> Lovelet Musakambewa</item>
        <item> Loyd Shrichena</item>
        <item> Lungile Munemo</item>
        <item> Memory Mugova</item>
        <item> Mnyasha Gumbie</item>
        <item> Munyaradzi Chiyanike</item>
        <item> Munyaradzi Munyaka</item>
        <item> Nelson Mukuri</item>
        <item> Nickie Andrews</item>
        <item> Norkay Khuleya</item>
        <item> Nowell Mafongoya</item>
        <item> Obert Mukaratiwa</item>
        <item> Pagaravanhu Rwatirera</item>
        <item> Patrick Mutakiwa</item>
        <item> Peter Chitsiku</item>
        <item> Peter Mtombeni</item>
        <item> Raphael Dumbura</item>
        <item> Rindai Zabanyana</item>
        <item> Robson Kabike</item>
        <item> Simbarashe Takavingei</item>
        <item> Stephen Ndiyamba</item>
        <item> Talent Nyazaya</item>
        <item> Tapiwa Chisango</item>
        <item> Tapiwa Mutandavari</item>
        <item> Tapiwa Zireva</item>
        <item> Tazvitya Chikwakwata</item>
        <item> Tendaishe Mushiri</item>
        <item> Tendekai Madzivire</item>
        <item> Timothy Kanyongo</item>
        <item> Tinashe Mutanda</item>
        <item> Tinayo Guveya</item>
        <item> Tivongeshe Dewa</item>
        <item> Tonderai Kwari</item>
        <item> Vengai Mutangara</item>
        <item> Webster Muchesa</item>
        <item> Wilbert Manyika</item>
        <item> YemuraiAbigail Mahachi</item>
        <item> Tariro Bunu</item>
        <item> Lloyd Mugadza</item>
        <item> Bekithemba Nyathi</item>
    </string-array>
    <string-array name="approver_hr_array">
        <item>Select Approver HR Official</item>
        <item>Benson Virimai</item>
        <item>Forward Manyanga</item>
        <item>George Mawere</item>
        <item>Jessica Chonzi</item>
        <item>Jessie Nenguwo</item>
        <item>Kudzai Denya</item>
        <item>Nowell Mafongoya</item>
        <item>Smartfin Techu</item>
        <item>Godknows Zhou</item>
    </string-array>
    <string-array name="deductions_criteria_array">
        <item>Deduction Criteria(months)</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="section_array">
        <item>"SELECT YOUR SECTION</item>
        <item>Blore Shaft Services</item>
        <item>Buses Maintenance</item>
        <item>Business Assurance</item>
        <item>Civils</item>
        <item>Clinic</item>
        <item>Commercial Administraion</item>
        <item>Contracts</item>
        <item>Contracts Administration</item>
        <item>Critical Development North</item>
        <item>Crushing and Screening</item>
        <item>Engineering General</item>
        <item>Environment</item>
        <item>Estates</item>
        <item>Geology</item>
        <item>HRD</item>
        <item>ICT</item>
        <item>Laboratory</item>
        <item>Loss Control</item>
        <item>Materials Handling General</item>
        <item>Materials Handling North</item>
        <item>Materials Handling South</item>
        <item>Metallurgy</item>
        <item>Mining North General</item>
        <item>Mining North Section 1</item>
        <item>Mining North Section 2</item>
        <item>Mining North Section 3</item>
        <item>Mining North Section 4</item>
        <item>Mining North Section 5</item>
        <item>Mining North Section 6</item>
        <item>Mining North Services</item>
        <item>Mining Planning</item>
        <item>Mining South General</item>
        <item>Mining South Section 1</item>
        <item>Mining South Section 2</item>
        <item>Mining South Section 3</item>
        <item>Mining South Section 4</item>
        <item>Mining South Section 5</item>
        <item>Mining South Section 6</item>
        <item>Mining South Services</item>
        <item>Planning</item>
        <item>Planning Services</item>
        <item>Plant Engineering</item>
        <item>Plant General</item>
        <item>Projects</item>
        <item>Proto</item>
        <item>Risk</item>
        <item>Roadways</item>
        <item>SHE General</item>
        <item>Supply Chain</item>
        <item>Survey</item>
        <item>Systems</item>
        <item>Tailings Dam</item>
        <item>Technical Projects</item>
        <item>Technical Services General</item>
        <item>Transport</item>
        <item>Upper Ores 1</item>
        <item>Upper Ores 2</item>
        <item>Ventilation</item>
        <item>Finance</item>
        <item>Administration</item>
        <item>Harare Office</item>
        <item>HR Core Process</item>
        <item>HR Central</item>
        <item>Rigs</item>
        <item>Mine Machines</item>
    </string-array>
    <string name="First_Name">First Name</string>
    <string name="Surname">Surname</string>
    <string name="Button">Next</string>
    <string name="Duration">For how long (in minutes)</string>
    <string name="Employee_Number">Employee Number</string>
    <string name="Place">Where did you see it?</string>
    <string name="Date">When did you see it?</string>
    <string name="Department">Department</string>
    <string name="Section">Select Section</string>
    <string name="i_saw_this_on">I saw this on:</string>
    <string name="at_what_time">At what time:</string>
    <string name="chk_excellence">Excellence</string>
    <string name="chk_goal">Goal Oriented</string>
    <string name="chk_ownership">Ownership</string>
    <string name="chk_empowerment">Empowerment</string>
    <string name="chk_recognition">Recognition</string>
    <string name="chk_motivation">Motivation</string>
    <string name="chk_communication">Communication</string>
    <string name="chk_customer">Customer Driven</string>
    <string name="chk_sustainability">Sustainability</string>
    <string name="chk_efficiency">Efficiency</string>
    <string name="chk_teamwork">Teamwork</string>
    <string name="chk_integrity">Integrity</string>
    <string name="chk_prayer">Prayer</string>
    <string name="chk_innovation">Innovation</string>
    <string name="chk_transparency">Transparency</string>
    <string name="chk_accountability">Accountability</string>
    <string name="chk_wellness">Wellness</string>
    <string name="chk_care">Care</string>
    <string name="value">VALUES (Tick values under observation - Refer to pact)</string>
    <string name="adherence_to_standard_operating_procedures_and_she_standards">Adherence to standard operating procedures and SHE standards</string>
    <string name="observable_behaviours">Observable Behaviours</string>
    <string name="Safe">Safe</string>
    <string name="Unsafe">Unsafe</string>
    <string name="demonstrating_hard_work_within_stipulated_start_and_finish_time">Demonstrating hard work within stipulated start and finish time</string>
    <string name="helping_each_other_brother_s_keeper">Helping each other (brother\'s keeper)</string>
    <string name="doing_the_right_thing_always_with_or_without_the_supervisor">Doing the right thing always with or without the supervisor</string>
    <string name="continuous_improvement_of_systems_and_adoption_of_advanced_technology">Continuous improvement of systems and adoption of advanced technology</string>
    <string name="utilisation_of_resources_efficiently_and_responsibly">Utilisation of resources efficiently and responsibly</string>
    <string name="communicating_information_effectively_openly_and_efficiently_within_team_members">Communicating information effectively, openly and efficiently within team members</string>
    <string name="what_did_you_see">What did you see?</string>
    <string name="comment">Comment?</string>
    <string name="submit">Submit</string>
</resources>