<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.she.bbs.BBSActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/days_acrued"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="392dp"
            android:layout_height="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/First_Name"
            android:inputType="textPersonName"
            android:autofillHints="@string/First_Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
            android:id="@+id/EditTextSurname"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints="@string/Surname"
            android:hint="@string/Surname"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/EditEmployeeNo"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/Employee_Number"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="261dp"
            android:layout_height="43dp"
            android:text="@string/Place"
            android:textSize="10pt"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/SpinnerDepartment"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:entries="@array/Department_List"
            android:prompt="@string/Department" />

        <Spinner
            android:id="@+id/SpinnerSection"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:entries="@array/Section_List"
            android:prompt="@string/Section" />

        <TextView
            android:id="@+id/TextViewTitle1"
            android:layout_width="260dp"
            android:layout_height="42dp"
            android:text="@string/Date"
            android:textSize="10pt"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/i_saw_this_on"
            android:importantForAutofill="no"
            android:inputType="date"
            android:focusable="false" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/at_what_time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:focusable="false"/>


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Duration"
            android:inputType="number"
            android:autofillHints="@string/Duration" />

        <Button
            android:id="@+id/Button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>