<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BBSActivity5">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="345dp"
            android:layout_height="68dp"
            android:text="@string/what_did_you_see"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="406dp"
            android:layout_height="230dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="336dp"
            android:layout_height="49dp"
            android:text="@string/comment"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="284dp" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="408dp"
            android:layout_height="194dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="348dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/submit"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="539dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>