<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BBSActivity3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="346dp"
            android:layout_height="44dp"
            android:text="@string/observable_behaviours"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adherence_to_standard_operating_procedures_and_she_standards"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Safe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Unsafe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demonstrating_hard_work_within_stipulated_start_and_finish_time"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/Safe"
                android:textColor="#154"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                tools:ignore="DuplicateIds" />

            <RadioButton
                android:id="@+id/Unsafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/Unsafe"
                android:textColor="#154"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                tools:ignore="DuplicateIds" />

        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helping_each_other_brother_s_keeper"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/Safe"
                android:textColor="#154"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                tools:ignore="DuplicateIds" />

            <RadioButton
                android:id="@+id/Unsafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/Unsafe"
                android:textColor="#154"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                tools:ignore="DuplicateIds" />

        </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doing_the_right_thing_always_with_or_without_the_supervisor"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Safe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />

        <RadioButton
            android:id="@+id/Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Unsafe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />

    </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuous_improvement_of_systems_and_adoption_of_advanced_technology"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Safe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />

        <RadioButton
            android:id="@+id/Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Unsafe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utilisation_of_resources_efficiently_and_responsibly"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Safe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />

        <RadioButton
            android:id="@+id/Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Unsafe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communicating_information_effectively_openly_and_efficiently_within_team_members"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Safe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />

        <RadioButton
            android:id="@+id/Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/Unsafe"
            android:textColor="#154"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            tools:ignore="DuplicateIds" />
        </RadioGroup>

        <Button
            android:id="@+id/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>